# driftsketch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-02-07-cfm-sketch-generation-design.md  2026-02-07-image-to-vector-sketch-evolution.md  2026-02-07-training-metrics-and-samples-design.md  bezier-splat-rendering.md  dit-architecture-and-training.md  flow-dpo-preference-learning.md  laion-aesthetics-loss.md  perceptual-distillation-training.md
docs/research/: dataset-evaluation.md  image-to-plotter-report-reflections.md
scripts/: benchmark_splat.py  download_quickdraw.py  validate_splat.py  visualize_controlsketch.py  visualize_dataset.py
src/driftsketch/: __init__.py  aesthetic.py  clip_encoder.py  dit.py  ema.py  inference.py  losses.py  model.py  perceptual.py  plotter_losses.py  rendering.py  splat_rendering.py  train.py  train_lines.py
src/driftsketch/data/: __init__.py  controlsketch.py  dataset.py  images.py  processing.py
