[project]
name = "driftsketch"
version = "0.1.0"
description = "Conditional Flow Matching for vector sketch generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "wandb>=0.15.0",
]

[project.scripts]
driftsketch-train = "driftsketch.train:train"
driftsketch-generate = "driftsketch.inference:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
