[project]
name = "driftsketch"
version = "0.1.0"
description = "Conditional Flow Matching for vector sketch generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15.0"]
render = ["pydiffvg @ file:///home/naka/code/easydiffvg"]
clip = ["open_clip_torch>=2.20.0"]
lpips = ["lpips>=0.1.4"]
aesthetic = ["open_clip_torch>=2.20.0"]
all = ["driftsketch[wandb,render,clip,lpips,aesthetic]"]

[project.scripts]
driftsketch-train = "driftsketch.train:train"
driftsketch-generate = "driftsketch.inference:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
